--- a/gb/16/12/20/n8610766.md
+++ b/gb/16/12/20/n8610766.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/iqqfyj3004/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/iqqfyj3004/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/iqqfyj3004/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/iqqfyj3004/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/iqqfyj3004/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>如何帮助青少年养成良好学习习惯？</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/Lotus-Fairy-Tale-i-1a-1-1200x686-320x200.jpg" />
+
 <h6></h6>
 <hr>
-<p>【大纪元2016年12月20日讯】（大纪元记者陈光编译报导）良好的学习习惯并不是天生就有的，也是不容易<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E5%85%BB%E6%88%90.md#1">养成</a>的，大多数<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E9%9D%92%E5%B0%91%E5%B9%B4.md#1">青少年</a>都需要我们去教他们如何<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E5%85%BB%E6%88%90.md#1">养成</a>良好的习惯。</p>
-<p>有效的学习策略可以减少孩子们对学校产生的压力，提高他们的学习成绩。由15家非营利组织共同支持的understood.org网站基于“给有学习障碍和多动症（ADHD）<ahref="https://github.com/iqqfyj3004/djy/blob/master/gb/tag/%E9%9D%92%E5%B0%91%E5%B9%B4.md#1">青少年</a>学习成功策略（Academic Success Strategies for Adolescents with Learning Disabilities and ADHD）（?2003布鲁克斯出版公司）”的建议，跟您的孩子分享了两个有用的策略。</p>
+<p>【大纪元2016年12月20日讯】（大纪元记者陈光编译报导）良好的学习习惯并不是天生就有的，也是不容易<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%BB%E6%88%90.md#1">养成</a>的，大多数<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9D%92%E5%B0%91%E5%B9%B4.md#1">青少年</a>都需要我们去教他们如何<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%BB%E6%88%90.md#1">养成</a>良好的习惯。</p>
+<p>有效的学习策略可以减少孩子们对学校产生的压力，提高他们的学习成绩。由15家非营利组织共同支持的understood.org网站基于“给有学习障碍和多动症（ADHD）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9D%92%E5%B0%91%E5%B9%B4.md#1">青少年</a>学习成功策略（Academic Success Strategies for Adolescents with Learning Disabilities and ADHD）（?2003布鲁克斯出版公司）”的建议，跟您的孩子分享了两个有用的策略。</p>
 <p><strong>通过“C”（Creat创建）完成测试和作业</strong></p>
 <p>许多中学和高中教师使用在线评分计划。许多人将每日的作业和到期日，以及成绩列出来。孩子可以利用这个计划进行学习，可以使用以下的步骤。</p>
 <p>1、创建日历</p>
@@ -34,48 +34,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/10/3/31/n2862405.md#1">青少年教育需要关爱倾听与理解</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/11/12/6/n3449385.md#1">圣安东尼奥项目开发培养学生软技能</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/11/12/16/n3458648.md#1">家长教育有方 青少年精神更健康</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/12/10/4/n3698485.md#1">青少年数码迷太深 家长需慎重</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/13/8/2/n3931419.md#1">七条建议 阻止亲子因做作业而争执</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/13/11/20/n4015256.md#1">美30%青少年是夜猫族  课业情绪皆差</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/1/14/n4615973.md#1">乐学乌托邦——走进美国私立“天才学校”</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/3/29/n7469959.md#1">上海调研：未上辅导班孩子学习能力更强</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/17/n12410329.md#1">六个策略让在线学习效果更佳</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/9/n12391067.md#1">避免错误，还是从错误中学习？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/3/31/n2862405.md#1">青少年教育需要关爱倾听与理解</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/12/6/n3449385.md#1">圣安东尼奥项目开发培养学生软技能</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/12/16/n3458648.md#1">家长教育有方 青少年精神更健康</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/10/4/n3698485.md#1">青少年数码迷太深 家长需慎重</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/8/2/n3931419.md#1">七条建议 阻止亲子因做作业而争执</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/20/n4015256.md#1">美30%青少年是夜猫族  课业情绪皆差</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/14/n4615973.md#1">乐学乌托邦——走进美国私立“天才学校”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/29/n7469959.md#1">上海调研：未上辅导班孩子学习能力更强</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/14/n13504063.md#1">自定进度式学习有哪些好处？（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/7/n13487996.md#1">自定进度式学习有哪些好处？（上）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11276054.md#1" target="_blank">金言：蒋介石当年在江西的惊人预言</a></li><li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10744431.md#1" target="_blank">顽疾绝症不医而愈 小小少年们的神奇际遇</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/20/n12416763.md#1">译成34种语言 一部童话触动世界人的心灵</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/18/n12412674.md#1">上善若水，水善利万物而不争</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/23/n12423944.md#1">女子濒死在隧道中高速飞行 还与耶稣对话</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/8/n12388919.md#1">灵魂在阴间受刑？古籍记载人身病痛另有缘由</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/26/n12433032.md#1">【重播】川普宾州“让美国再次伟大”集会演讲</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/26/n12433286.md#1">【拍案惊奇】李克强上头版夹缝 中芯国际被制裁</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/26/n12431786.md#1">【重播】川普提名巴雷特为最高法院大法官</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430764.md#1">红二代与习近平决裂 对习杀伤力非常大</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429962.md#1">中共病毒突变 戴口罩洗手恐怕都不管用</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12428212.md#1">【新闻看点】遭美重击北京狂扰台海 美军重返台？</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429560.md#1">黄鸿升今火化 峮峮痛哭 杨丞琳送最后一程</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430391.md#1">黄鸿升花葬阳明山 宪哥曝遗容“很帅像睡觉”</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430801.md#1">黄鸿升长眠阳明山 生前IG转为纪念账号</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12428559.md#1">周润发行山邂逅网友 听到公益计划立马掏腰包</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12428038.md#1">朱孝天宠妻如宠女 因遗传病没打算生小孩</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/24/n12427711.md#1">驼背是肺的大敌！3招练胸背肌 改善驼背又强肺</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/26/n12431601.md#1">车评：完美的油电混合 2020 Lexus RX450h F Sport</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/25/n12430512.md#1">日本前首相医师：这样站立2分钟 等于走路1小时</a></li>
-<li><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/20/9/23/n12425078.md#1">6类人易得退化性关节炎 医师：做对运动护膝盖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/iqqfyj3004/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/iqqfyj3004/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/20/n8610766.htm">如何帮助青少年养成良好学习习惯？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/12/20/n8610766.htm">如何帮助青少年养成良好学习习惯？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/iqqfyj3004/djy/blob/master/gb/16/12/20/n8610766.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/iqqfyj3004/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iqqfyj3004/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iqqfyj3004/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iqqfyj3004/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/16/12/20/n8610766.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
